vlib/v/checker/tests/lock_nonshared.out
vlib/v/checker/tests/lock_nonshared.vv:10:7: error: `a` must be declared as `shared` variable to be locked
    8 |         x: 5
    9 |     }
   10 |     lock a {
      |          ^
   11 |         a.x++
   12 |     }
