vlib/v/checker/tests/lock_nonshared.vv
struct St {
mut:
	x int
}

fn main() {
	mut a := &St{
		x: 5
	}
	lock a {
		a.x++
	}
	println(a)
}
